# snowseb

./: README.md  pyproject.toml  snowseb.py
snowseb_gui/: energy_gui.ui  energy_gui5.py  matplotlibwidget.py  mkgui5.sh  timeserieswidget.py  timeserieswidget_gui.ui  timeserieswidget_gui5.py
