[tool.poetry]
name = "snowseb"
version = "1.0"
description = "A GUI-base software to teach surface energy balance"
authors = ["Ghislain Picard <ghislain.picard@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = ">3.7"
PyQt5 = ">5"
numpy = ">1"

[tool.poetry.dev-dependencies]
matplotlib = ">3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}